# pacmensl

./: .atom-dbg.cson  .clang_complete  .gitignore  CMakeLists.txt  README.md  submit_scalability_multi_nodes.sh
benchmarks/: benchmark.cpp  benchmark_partitioning_schemes.cpp  benchmark_scalability.cpp  multiple_single_core_jobs.cpp
cmake-modules/: FindPETSc.cmake
dependencies/: spack_m1.yaml
docker/: Dockerfile  build_docker_image.sh
docs/: doc_config
examples/: CMakeLists.txt  benchmark.cpp  benchmark_intranode.cpp  benchmark_multi_node.cpp  distribute_states.cpp  hog1p.cpp  hog1p_matvec.cpp  hog1p_matvec2.cpp  multiple_single_core_jobs.cpp  repressilator.cpp  repressilator_ts.cpp  signal_activated_bursting.cpp  signalactivatedbursting.cpp  solve_hog1p_tv_with_cvode.cpp  solve_hog1p_tv_with_ts.cpp  solve_hog_adaptive_FSP.cpp  solve_toggle_adaptive_FSP.cpp  time_invariant_bursting.cpp  tnfa_no_drug.cpp  transcr_reg_6d.cpp
ext/: ext_armadillo.py  ext_cvode.py  ext_metis.py  ext_parmetis.py  ext_petsc.py  ext_petsc_sandia.py  ext_zoltan.py  get_ext_libraries.py
include/: CVODEFSP.h  FSP.h  FSPSolver.h  FiniteProblemSolver.h  FiniteStateSubset.h  KExpv.h  (+19 more)
src/: CMakeLists.txt  CVODEFSP.cpp  FSP.cpp  FSPSolver.cpp  FiniteProblemSolver.cpp  FiniteStateSubset.cpp  FiniteStateSubsetGraph.cpp  FiniteStateSubsetHierarch.cpp  FiniteStateSubsetHyperGraph.cpp  FiniteStateSubsetLinear.cpp  FiniteStateSubsetNaive.cpp  FiniteStateSubsetParMetis.cpp  FiniteStateSubsetRCB.cpp  HyperRecOp.cc  HyperRecOp.cpp  HyperRecOpDD.cc  HyperRecOpDD.cpp  KExpv.cc  KExpv.cpp  Magnus4.cc  Magnus4.cpp  Magnus4FSP.cc  Magnus4FSP.cpp  MatrixSet.cpp  cme_util.cc  cme_util.cpp  fsp_matrix.cc  pacmensl.h  pacmensl_all.h  pecmeal_all.h  pfspat.h  pfspat_all.h
src/FPSolver/: CVODEFSP.cpp  CVODEFSP.h  FiniteProblemSolver.cpp  FiniteProblemSolver.h
src/FSP/: CMakeLists.txt  DiscreteDistribution.cpp  DiscreteDistribution.h  FSPSolver.cpp  FSPSolver.h  FspSolverBase.cpp  FspSolverBase.h  FspSolverMultiSinks.cpp  FspSolverMultiSinks.h
src/FSS/: CMakeLists.txt  FiniteStateSubset.cpp  FiniteStateSubset.h  FiniteStateSubsetFrontiers.cpp  FiniteStateSubsetFrontiers.h  FiniteStateSubsetGraph.cpp  FiniteStateSubsetGraph.h  FiniteStateSubsetHelpers.cpp  FiniteStateSubsetHelpers.h  FiniteStateSubsetHierarch.cpp  FiniteStateSubsetHierarch.h  FiniteStateSubsetHyperGraph.cpp  FiniteStateSubsetHyperGraph.h  FiniteStateSubsetMigration.cpp  FiniteStateSubsetMigration.h  FiniteStateSubsetNaive.cpp  FiniteStateSubsetNaive.h  FiniteStateSubsetRCB.cpp  FiniteStateSubsetRCB.h  FiniteStateSubsetZoltanQuery.cpp  FiniteStateSubsetZoltanQuery.h  StateSetBase.cpp  StateSetBase.h  StateSetConstrained.cpp  StateSetConstrained.h
src/FSS/Partitioner/: CMakeLists.txt  StatePartitioner.cpp  StatePartitioner.h  StatePartitionerBase.cpp  StatePartitionerBase.h  StatePartitionerGraph.cpp  StatePartitionerGraph.h  StatePartitionerHyperGraph.cpp  StatePartitionerHyperGraph.h
src/Fsp/: DiscreteDistribution.cpp  DiscreteDistribution.h  FspSolverMultiSinks.cpp  FspSolverMultiSinks.h
src/Matrix/: CMakeLists.txt  FspMatrixBase.cpp  FspMatrixBase.h  FspMatrixConstrained.cpp  FspMatrixConstrained.h  MatrixSet.cpp  MatrixSet.h
src/Models/: CMakeLists.txt  Model.cpp  Model.h  SensModel.cpp  SensModel.h  hog1p_3d_model.h  hog1p_5d_model.h  repressilator_model.h  toggle_model.h  transcription_regulation_6d_model.h
src/OdeSolver/: CMakeLists.txt  CvodeFsp.cpp  CvodeFsp.h  EpicFsp.cpp  KrylovFsp.cpp  KrylovFsp.h  OdeSolverBase.cpp  OdeSolverBase.h  TsFsp.cpp  TsFsp.h
src/OdeSolver/cvode_interface/: CVODEFSP.cpp  CVODEFSP.h
src/Partitioner/: CMakeLists.txt  StatePartitioner.cpp  StatePartitioner.h  StatePartitionerBase.cpp  StatePartitionerBase.h  StatePartitionerGraph.cpp  StatePartitionerGraph.h  StatePartitionerHyperGraph.cpp  StatePartitionerHyperGraph.h
src/Pdo/: CMakeLists.txt  Pdo.cpp  Pdo.h
src/PetscWrap/: PetscWrap.cpp  PetscWrap.h
src/SensFsp/: CMakeLists.txt  ForwardSensCvodeFsp.cpp  ForwardSensCvodeFsp.h  ForwardSensSolverBase.cpp  ForwardSensSolverBase.h  SensDiscreteDistribution.cpp  SensDiscreteDistribution.h  SensFspMatrix.cpp  SensFspMatrix.h  SensFspSolverMultiSinks.cpp  SensFspSolverMultiSinks.h
src/SmFish/: CMakeLists.txt  SmFishSnapshot.cpp  SmFishSnapshot.h
src/StateSet/: CMakeLists.txt  StateSet.cpp  StateSet.h  StateSetBase.cpp  StateSetBase.h  StateSetConstrained.cpp  StateSetConstrained.h
src/StationaryFsp/: CMakeLists.txt  StationaryFspMatrixConstrained.cpp  StationaryFspMatrixConstrained.h  StationaryFspSolverMultiSinks.cpp  StationaryFspSolverMultiSinks.h  StationaryMCSolver.cpp  StationaryMCSolver.h
src/Sys/: CMakeLists.txt  ErrorHandling.h  Sys.cpp  Sys.h  pacmenMath.h
src/Util/: CMakeLists.txt  cme_util.cpp  cme_util.h
src/models/: hog1p_3d_model.h  hog1p_5d_model.h  repressilator_model.h  toggle_model.h  transcription_regulation_6d_model.h
src/util/: CMakeLists.txt  cme_util.cpp  cme_util.h
test/: CMakeLists.txt  diagonal_matvec.cpp  form_partition_hog1p_matrix.cc  form_partition_hog1p_matrix.cpp  form_partition_toggle_matrix.cc  form_partition_toggle_matrix.cpp  form_toggle_matrix.cc  form_toggle_matrix.cpp  form_toggle_operator.cc  form_toggle_operator.cpp  solve_hog1p_tv.cc  solve_hog1p_tv_damped_with_magnus.cc  solve_hog1p_tv_damped_with_magnus.cpp  solve_hog1p_tv_damped_with_magnus_dd.cc  solve_hog1p_tv_damped_with_magnus_dd.cpp  solve_hog1p_tv_damped_with_ts.cc  solve_hog1p_tv_damped_with_ts.cpp  solve_hog1p_tv_damped_with_ts_dd.cc  solve_hog1p_tv_damped_with_ts_dd.cpp  solve_hog1p_tv_with_magnus.cc  solve_hog1p_tv_with_magnus.cpp  solve_hog1p_tv_with_magnus_dd.cc  solve_hog1p_tv_with_magnus_dd.cpp  solve_hog1p_tv_with_ts.cc  solve_hog1p_tv_with_ts.cpp  solve_hog1p_tv_with_ts_dd.cc  solve_hog1p_tv_with_ts_dd.cpp  solve_hog_adaptive_FSP.cpp  solve_toggle.cc  solve_toggle.cpp  solve_toggle_adaptive_FSP.cc  solve_toggle_adaptive_FSP.cpp  solve_toggle_tv.cc  solve_toggle_tv.cpp  test_ao.cpp  test_fps_cvode.cpp  test_fsp_solver.cpp  test_fss.cpp  test_mat.cpp  test_mat_constrained.cpp  (+4 more)
(+60 files in other folders)
